<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PayPalRetailSDK</string>


    <!-- Strings related to Signature Activity -->
    <string name="sdk_actvy_signature_charge_details">%1$s charged to %2$s *%3$s</string>
    <string name="sdk_actvy_signature_msg">I agree to pay the above amount according to the card issuer agreement.</string>
    <string name="sdk_actvy_signature_sign_here">Sign Here</string>
    <string name="sdk_actvy_signature_done">Done</string>
    <string name="sdk_actvy_signature_cancel">Cancel</string>
    <string name="sdk_actvy_signature_cancel_transaction" note="">Cancel</string>
    <string name="sdk_actvy_signature_cancel_transaction_message" note="">Would you like to cancel this transaction?</string>
    <string name="sdk_actvy_signature_cancel_transaction_notallowed" note="">Complete Purchase</string>
    <string name="sdk_actvy_signature_cancel_transaction_notallowed_message" note="">Please tap Done to complete this purchase. (If you need to change your order, you can ask for a refund.)</string>

    <!-- Strings related to ReceiptActivity & sdk_activity_receipt.xml -->
    <string name="sdk_actvy_receipt_title_payment_complete">Payment Complete</string>
    <string name="sdk_actvy_receipt_title_payment_declined">Declined</string>
    <string name="sdk_actvy_receipt_title_refund_success">Refund Complete</string>
    <string name="sdk_actvy_receipt_title_refund_failure">Refund Cancelled</string>
    <string name="sdk_actvy_receipt_title_transaction_cancelled">Transaction Cancelled</string>
    <string name="sdk_actvy_receipt_title_payment_failed">Payment Failed</string>
    <string name="sdk_actvy_receipt_msg_ask_customer">Would you like a receipt?</string>
    <string name="sdk_actvy_receipt_trxn_cancelled_msg_ask_customer">Your card has not been charged.\nWould you like a receipt?</string>
    <string name="checkmark" note="accessibility hint">Checkmark</string>
    <string name="default_total_title" note="Total text on Total Label">TOTAL</string>
    <string name="sdk_actvy_receipt_option_email">Email</string>
    <string name="sdk_actvy_receipt_option_text">Text</string>
    <string name="sdk_actvy_receipt_option_print">Print</string>
    <string name="sdk_actvy_receipt_option_no_receipt">No receipt</string>
    <string name="sdk_actvy_receipt_title_email">EMAIL RECEIPT</string>
    <string name="sdk_actvy_receipt_title_text">TEXT RECEIPT</string>
    <string name="sdk_actvy_receipt_title_send">Send</string>
    <string name="sdk_actvy_receipt_email_hint">Email Address</string>
    <string name="sdk_actvy_receipt_text_hint">Phone Number</string>
    <string name="sdk_actvy_receipt_msg_invalid_email" note="Invalid email address description">Please enter a valid email address</string>
    <string name="send_receipt_email_change_description" note ="accessibility hint">Change E-mail</string>
    <string name="send_receipt_phone_change_description" note ="accessibility hint">Change Number</string>
    <string name="receipt_icon_description" note="accessibility hint">Receipt Icon</string>
    <string name="sms_international_code_msg" note="">The number must include the country code.</string>
    <string name="sms_receipt_privacy_message" note="PayPal privacy policy message for sms receipt">You agree that you\'re authorized to add this phone number and consent to receiving automated texts.  Message and data rates may apply.  Receipts will be delivered by PayPal.  See your receipt for PayPal\'s Privacy Policy.</string>
    <string name="email_receipt_privacy_message" note="PayPal privacy policy message for email receipt">By entering my email, I agree to receive emails for all future PayPal Here transactions.</string>
    <string name="send_receipt_privacy_message" note="PayPal privacy policy message for receipt options">Receipts will be delivered by PayPal. See your receipt for PayPal\'s Privacy Policy.</string>

    <!-- Dialog strings for the receipt flow -->
    <string name="sdk_dlg_title_receipt_sending">Sending Receipt</string>
    <string name="sdk_dlg_msg_receipt_sending">Sending Receipt&#8230;</string>
    <string name="sdk_dlg_msg_receipt_error">System error. Please try again later</string>
    <string name="title_activity_receipt_options">ReceiptOptionsActivity</string>

    <!-- Strings related to toast messages -->
    <string name="sdk_toast_swipe_failed_text" note="swipe failed text">Swipe Failed</string>

    <!-- Internal storage file name -->
    <string name="preference_file_key">paypalretailsdkdb</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Common strings -->
    <string name="back_button" note="accessibility hint">Back</string>
    <string name="next_button" note="accessibility hint">Next</string>
    <string name="sdk_OK">OK</string>
    <string name="sdk_cancel">Cancel</string>
    <string name="sdk_yes" note="">Yes</string>
    <string name="sdk_no" note="">No</string>

</resources>