<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/larger"
    android:background="@color/sdk_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/xxlarge"
        android:orientation="vertical">

        <TextView
            android:id="@+id/payment_complete_msg_retail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/large"
            android:text="@string/sdk_actvy_receipt_title_payment_complete"
            android:textColor="@color/sdk_dark_blue"
            android:textSize="@dimen/text_header" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/xxxlarge"
            android:gravity="center_horizontal"
            android:text="@string/sdk_actvy_receipt_msg_ask_customer"
            android:textColor="@color/sdk_dark_blue"
            android:textSize="@dimen/text_body" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/id_options_layout_retail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/sdk_divider_email_options" />

                    <FrameLayout
                        android:id="@+id/id_email_receipt_button_retail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/id_email_button_retail"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/sdk_layout_height"
                            android:text="@string/sdk_actvy_receipt_option_email"
                            android:gravity="center"
                            android:singleLine="true"
                            android:textColor="@color/sdk_blue"
                            android:textSize="@dimen/text_body"
                            android:paddingRight="@dimen/xxxxlarge"
                            android:paddingLeft="@dimen/xxxxlarge"
                            android:background="@drawable/sdk_button_transparent_action"/>

                        <ImageView
                            android:id="@+id/id_change_receipt_email_retail"
                            android:contentDescription="@string/send_receipt_email_change_description"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingLeft="@dimen/large"
                            android:paddingRight="@dimen/large"
                            android:layout_gravity="center|end"
                            android:visibility="gone"
                            android:layout_marginRight="@dimen/large"
                            android:src="@drawable/sdk_edit_receipt_selector"/>

                    </FrameLayout>

                    <include layout="@layout/sdk_divider_email_options" />

                    <FrameLayout
                        android:id="@+id/id_text_receipt_button_retail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/id_text_button_retail"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/sdk_layout_height"
                            android:text="@string/sdk_actvy_receipt_option_text"
                            android:gravity="center"
                            android:singleLine="true"
                            android:textColor="@color/sdk_blue"
                            android:textSize="@dimen/text_body"
                            android:paddingRight="@dimen/xxxxlarge"
                            android:paddingLeft="@dimen/xxxxlarge"
                            android:background="@drawable/sdk_button_transparent_action"/>

                        <ImageView
                            android:id="@+id/id_change_receipt_text_retail"
                            android:contentDescription="@string/send_receipt_phone_change_description"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingLeft="@dimen/large"
                            android:paddingRight="@dimen/large"
                            android:layout_gravity="center|end"
                            android:visibility="gone"
                            android:layout_marginRight="@dimen/large"
                            android:src="@drawable/sdk_edit_receipt_selector"/>

                    </FrameLayout>

                    <include layout="@layout/sdk_divider_email_options" />
                </LinearLayout>

                <TextView
                    android:id="@+id/receipts_disclaimer_retail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_xsmall"
                    android:layout_margin="@dimen/xxlarge"
                    android:textColor="@color/sdk_black"
                    android:lineSpacingExtra="@dimen/small"
                    android:gravity="center"
                    android:text="@string/send_receipt_privacy_message"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>